// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProductionPlanEditor Component should match snapshot while loading 1`] = `
<div>
  <div
    class="text-center py-4"
  >
    <p
      class="text-text-muted"
    >
      Loading plan...
    </p>
  </div>
</div>
`;

exports[`ProductionPlanEditor Component should match snapshot with loaded plan 1`] = `
<div>
  <div>
    <div
      class="flex justify-between items-center mb-2"
    >
      <div
        class="flex items-center gap-2"
      >
        <img
          alt=""
          class="rounded"
          height="40"
          src="https://images.evetech.net/types/587/icon?size=64"
          width="40"
        />
        <div>
          <div
            class="flex items-center gap-1"
          >
            <h2
              class="text-xl font-semibold text-text-emphasis"
            >
              Rifter Production
            </h2>
            <button
              class="p-1 rounded text-text-muted hover:text-primary hover:bg-interactive-selected"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-pencil h-4 w-4"
                data-testid="EditIcon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                />
                <path
                  d="m15 5 4 4"
                />
              </svg>
            </button>
          </div>
          <p
            class="text-text-muted text-[13px]"
          >
            1
             production step(s)
          </p>
        </div>
      </div>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-[var(--color-bg-void)] shadow font-semibold h-9 px-4 py-2 bg-teal-success hover:bg-teal-success/80"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-play h-4 w-4 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
          />
        </svg>
        Generate Jobs
      </button>
    </div>
    <div
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-orientation="horizontal"
        class="flex border-b border-overlay-medium p-0 h-auto bg-transparent text-muted-foreground mb-2"
        data-orientation="horizontal"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-_r_0_-content-step-tree"
          aria-selected="true"
          class="inline-flex items-center justify-center whitespace-nowrap px-3 py-2 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-muted-foreground data-[state=active]:text-[var(--color-primary-cyan)] data-[state=active]:border-b-2 data-[state=active]:border-[var(--color-primary-cyan)] -mb-px"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-_r_0_-trigger-step-tree"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Step Tree
        </button>
        <button
          aria-controls="radix-_r_0_-content-batch-configure"
          aria-selected="false"
          class="inline-flex items-center justify-center whitespace-nowrap px-3 py-2 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-muted-foreground data-[state=active]:text-[var(--color-primary-cyan)] data-[state=active]:border-b-2 data-[state=active]:border-[var(--color-primary-cyan)] -mb-px"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-_r_0_-trigger-batch-configure"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Batch Configure
        </button>
        <button
          aria-controls="radix-_r_0_-content-transport"
          aria-selected="false"
          class="justify-center whitespace-nowrap px-3 py-2 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-muted-foreground data-[state=active]:text-[var(--color-primary-cyan)] data-[state=active]:border-b-2 data-[state=active]:border-[var(--color-primary-cyan)] -mb-px flex items-center gap-1"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-_r_0_-trigger-transport"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-truck h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"
            />
            <path
              d="M15 18H9"
            />
            <path
              d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"
            />
            <circle
              cx="17"
              cy="18"
              r="2"
            />
            <circle
              cx="7"
              cy="18"
              r="2"
            />
          </svg>
          Transport
        </button>
      </div>
      <div
        aria-labelledby="radix-_r_0_-trigger-step-tree"
        class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
        data-orientation="horizontal"
        data-state="active"
        id="radix-_r_0_-content-step-tree"
        role="tabpanel"
        style="animation-duration: 0s;"
        tabindex="0"
      >
        <div
          class="overflow-x-auto rounded-sm border border-overlay-subtle"
        >
          <div
            class="relative w-full overflow-auto"
          >
            <table
              class="w-full caption-bottom text-sm"
            >
              <thead
                class="[&_tr]:border-b [&_tr]:border-[var(--color-border-active)]"
              >
                <tr
                  class="border-b border-[var(--color-border-dim)] transition-colors hover:bg-interactive-hover data-[state=selected]:bg-muted bg-background-void"
                >
                  <th
                    class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    Item / Material
                  </th>
                  <th
                    class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    ME / TE
                  </th>
                  <th
                    class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    Structure / Rig / Sec
                  </th>
                  <th
                    class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    Station
                  </th>
                  <th
                    class="h-10 px-2 align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
                  >
                    Actions
                  </th>
                </tr>
              </thead>
              <tbody
                class="[&_tr:last-child]:border-0"
              >
                <tr
                  class="border-b border-[var(--color-border-dim)] transition-colors data-[state=selected]:bg-muted bg-background-elevated hover:bg-background-elevated"
                >
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] relative pl-0"
                  >
                    <div
                      class="absolute top-0 bottom-0 w-[3px]"
                      style="left: 8px; background-color: var(--color-primary-cyan);"
                    />
                    <div
                      class="flex items-center gap-1"
                      style="padding-left: 20px;"
                    >
                      <button
                        class="p-0.5 rounded text-text-secondary hover:bg-overlay-subtle"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down h-4 w-4"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                      <img
                        alt=""
                        class="rounded-sm"
                        height="20"
                        src="https://images.evetech.net/types/587/icon?size=32"
                        width="20"
                      />
                      <span
                        class="text-text-emphasis text-sm font-semibold"
                      >
                        Rifter
                      </span>
                      <div
                        class="inline-flex items-center rounded-sm px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border border-[var(--color-primary-cyan)]/30 shadow ml-1 h-5 text-[11px] cursor-default bg-bg-science text-blue-science hover:bg-bg-science"
                      >
                        manufacturing
                      </div>
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-secondary text-[13px]"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      ME 
                      10
                       / TE 
                      20
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-secondary text-[13px]"
                  >
                    raitaru
                     / 
                    t2
                     / 
                    high
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-secondary text-[13px]"
                  >
                    —
                    <span
                      class="block text-text-muted text-[11px] italic"
                    >
                      Out: set at build time
                    </span>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
                  >
                    <button
                      aria-label="Edit"
                      class="p-1 rounded hover:bg-interactive-selected text-primary"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-pencil h-4 w-4"
                        data-testid="EditIcon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                        />
                        <path
                          d="m15 5 4 4"
                        />
                      </svg>
                    </button>
                  </td>
                </tr>
                <tr
                  class="border-b border-[var(--color-border-dim)] transition-colors data-[state=selected]:bg-muted bg-background-void hover:bg-background-panel"
                >
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] relative pl-0"
                  >
                    <div
                      class="absolute top-0 bottom-0 w-[3px]"
                      style="left: 8px; background-color: var(--color-primary-cyan);"
                    />
                    <div
                      class="flex items-center gap-1"
                      style="padding-left: 52px;"
                    >
                      <img
                        alt=""
                        class="rounded-sm"
                        height="18"
                        src="https://images.evetech.net/types/11399/icon?size=32"
                        width="18"
                      />
                      <span
                        class="text-text-primary text-[13px]"
                      >
                        Morphite
                      </span>
                      <span
                        class="text-text-muted text-xs ml-1"
                      >
                        x
                        10
                      </span>
                      <div
                        class="inline-flex items-center rounded-sm px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border hover:border-[var(--color-border-active)] ml-1 h-[18px] text-[10px] border-overlay-medium text-text-muted cursor-default"
                      >
                        Buy
                      </div>
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-muted text-xs"
                  />
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  />
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  />
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
                  >
                    <button
                      class="p-1 rounded hover:bg-overlay-subtle text-teal-success"
                      title="Switch to Produce"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-wrench h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.106-3.105c.32-.322.863-.22.983.218a6 6 0 0 1-8.259 7.057l-7.91 7.91a1 1 0 0 1-2.999-3l7.91-7.91a6 6 0 0 1 7.057-8.259c.438.12.54.662.219.984z"
                        />
                      </svg>
                    </button>
                  </td>
                </tr>
                <tr
                  class="border-b border-[var(--color-border-dim)] transition-colors data-[state=selected]:bg-muted bg-background-void hover:bg-background-panel"
                >
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] relative pl-0"
                  >
                    <div
                      class="absolute top-0 bottom-0 w-[3px]"
                      style="left: 8px; background-color: var(--color-primary-cyan);"
                    />
                    <div
                      class="flex items-center gap-1"
                      style="padding-left: 52px;"
                    >
                      <img
                        alt=""
                        class="rounded-sm"
                        height="18"
                        src="https://images.evetech.net/types/34/icon?size=32"
                        width="18"
                      />
                      <span
                        class="text-text-primary text-[13px]"
                      >
                        Tritanium
                      </span>
                      <span
                        class="text-text-muted text-xs ml-1"
                      >
                        x
                        22222
                      </span>
                      <div
                        class="inline-flex items-center rounded-sm px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border hover:border-[var(--color-border-active)] ml-1 h-[18px] text-[10px] border-overlay-medium text-text-muted cursor-default"
                      >
                        Buy
                      </div>
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-muted text-xs"
                  />
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  />
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  />
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
                  />
                </tr>
                <tr
                  class="border-b border-[var(--color-border-dim)] transition-colors data-[state=selected]:bg-muted bg-background-void hover:bg-background-panel"
                >
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] relative pl-0"
                  >
                    <div
                      class="absolute top-0 bottom-0 w-[3px]"
                      style="left: 8px; background-color: var(--color-primary-cyan);"
                    />
                    <div
                      class="flex items-center gap-1"
                      style="padding-left: 52px;"
                    >
                      <img
                        alt=""
                        class="rounded-sm"
                        height="18"
                        src="https://images.evetech.net/types/35/icon?size=32"
                        width="18"
                      />
                      <span
                        class="text-text-primary text-[13px]"
                      >
                        Pyerite
                      </span>
                      <span
                        class="text-text-muted text-xs ml-1"
                      >
                        x
                        5555
                      </span>
                      <div
                        class="inline-flex items-center rounded-sm px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border hover:border-[var(--color-border-active)] ml-1 h-[18px] text-[10px] border-overlay-medium text-text-muted cursor-default"
                      >
                        Buy
                      </div>
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-muted text-xs"
                  />
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  />
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  />
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="radix-_r_0_-trigger-batch-configure"
        class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-_r_0_-content-batch-configure"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-labelledby="radix-_r_0_-trigger-transport"
        class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-_r_0_-content-transport"
        role="tabpanel"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`ProductionPlanEditor Component should match snapshot with multi-step plan 1`] = `
<div>
  <div>
    <div
      class="flex justify-between items-center mb-2"
    >
      <div
        class="flex items-center gap-2"
      >
        <img
          alt=""
          class="rounded"
          height="40"
          src="https://images.evetech.net/types/587/icon?size=64"
          width="40"
        />
        <div>
          <div
            class="flex items-center gap-1"
          >
            <h2
              class="text-xl font-semibold text-text-emphasis"
            >
              Rifter Production
            </h2>
            <button
              class="p-1 rounded text-text-muted hover:text-primary hover:bg-interactive-selected"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-pencil h-4 w-4"
                data-testid="EditIcon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                />
                <path
                  d="m15 5 4 4"
                />
              </svg>
            </button>
          </div>
          <p
            class="text-text-muted text-[13px]"
          >
            2
             production step(s)
          </p>
        </div>
      </div>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-[var(--color-bg-void)] shadow font-semibold h-9 px-4 py-2 bg-teal-success hover:bg-teal-success/80"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-play h-4 w-4 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
          />
        </svg>
        Generate Jobs
      </button>
    </div>
    <div
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-orientation="horizontal"
        class="flex border-b border-overlay-medium p-0 h-auto bg-transparent text-muted-foreground mb-2"
        data-orientation="horizontal"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-_r_2q_-content-step-tree"
          aria-selected="true"
          class="inline-flex items-center justify-center whitespace-nowrap px-3 py-2 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-muted-foreground data-[state=active]:text-[var(--color-primary-cyan)] data-[state=active]:border-b-2 data-[state=active]:border-[var(--color-primary-cyan)] -mb-px"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-_r_2q_-trigger-step-tree"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Step Tree
        </button>
        <button
          aria-controls="radix-_r_2q_-content-batch-configure"
          aria-selected="false"
          class="inline-flex items-center justify-center whitespace-nowrap px-3 py-2 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-muted-foreground data-[state=active]:text-[var(--color-primary-cyan)] data-[state=active]:border-b-2 data-[state=active]:border-[var(--color-primary-cyan)] -mb-px"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-_r_2q_-trigger-batch-configure"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Batch Configure
        </button>
        <button
          aria-controls="radix-_r_2q_-content-transport"
          aria-selected="false"
          class="justify-center whitespace-nowrap px-3 py-2 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-muted-foreground data-[state=active]:text-[var(--color-primary-cyan)] data-[state=active]:border-b-2 data-[state=active]:border-[var(--color-primary-cyan)] -mb-px flex items-center gap-1"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-_r_2q_-trigger-transport"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-truck h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"
            />
            <path
              d="M15 18H9"
            />
            <path
              d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"
            />
            <circle
              cx="17"
              cy="18"
              r="2"
            />
            <circle
              cx="7"
              cy="18"
              r="2"
            />
          </svg>
          Transport
        </button>
      </div>
      <div
        aria-labelledby="radix-_r_2q_-trigger-step-tree"
        class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
        data-orientation="horizontal"
        data-state="active"
        id="radix-_r_2q_-content-step-tree"
        role="tabpanel"
        style="animation-duration: 0s;"
        tabindex="0"
      >
        <div
          class="overflow-x-auto rounded-sm border border-overlay-subtle"
        >
          <div
            class="relative w-full overflow-auto"
          >
            <table
              class="w-full caption-bottom text-sm"
            >
              <thead
                class="[&_tr]:border-b [&_tr]:border-[var(--color-border-active)]"
              >
                <tr
                  class="border-b border-[var(--color-border-dim)] transition-colors hover:bg-interactive-hover data-[state=selected]:bg-muted bg-background-void"
                >
                  <th
                    class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    Item / Material
                  </th>
                  <th
                    class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    ME / TE
                  </th>
                  <th
                    class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    Structure / Rig / Sec
                  </th>
                  <th
                    class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    Station
                  </th>
                  <th
                    class="h-10 px-2 align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
                  >
                    Actions
                  </th>
                </tr>
              </thead>
              <tbody
                class="[&_tr:last-child]:border-0"
              >
                <tr
                  class="border-b border-[var(--color-border-dim)] transition-colors data-[state=selected]:bg-muted bg-background-elevated hover:bg-background-elevated"
                >
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] relative pl-0"
                  >
                    <div
                      class="absolute top-0 bottom-0 w-[3px]"
                      style="left: 8px; background-color: var(--color-primary-cyan);"
                    />
                    <div
                      class="flex items-center gap-1"
                      style="padding-left: 20px;"
                    >
                      <button
                        class="p-0.5 rounded text-text-secondary hover:bg-overlay-subtle"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down h-4 w-4"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                      <img
                        alt=""
                        class="rounded-sm"
                        height="20"
                        src="https://images.evetech.net/types/587/icon?size=32"
                        width="20"
                      />
                      <span
                        class="text-text-emphasis text-sm font-semibold"
                      >
                        Rifter
                      </span>
                      <div
                        class="inline-flex items-center rounded-sm px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border border-[var(--color-primary-cyan)]/30 shadow ml-1 h-5 text-[11px] cursor-default bg-bg-science text-blue-science hover:bg-bg-science"
                      >
                        manufacturing
                      </div>
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-secondary text-[13px]"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      ME 
                      10
                       / TE 
                      20
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-secondary text-[13px]"
                  >
                    raitaru
                     / 
                    t2
                     / 
                    high
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-secondary text-[13px]"
                  >
                    —
                    <span
                      class="block text-text-muted text-[11px] italic"
                    >
                      Out: set at build time
                    </span>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
                  >
                    <button
                      aria-label="Edit"
                      class="p-1 rounded hover:bg-interactive-selected text-primary"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-pencil h-4 w-4"
                        data-testid="EditIcon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                        />
                        <path
                          d="m15 5 4 4"
                        />
                      </svg>
                    </button>
                  </td>
                </tr>
                <tr
                  class="border-b border-[var(--color-border-dim)] transition-colors data-[state=selected]:bg-muted bg-background-panel hover:bg-background-elevated"
                >
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] relative pl-0"
                  >
                    <div
                      class="absolute top-0 bottom-0 w-[3px]"
                      style="left: 8px; background-color: var(--color-primary-cyan);"
                    />
                    <div
                      class="absolute top-0 bottom-0 w-[3px]"
                      style="left: 40px; background-color: var(--color-primary-cyan);"
                    />
                    <div
                      class="flex items-center gap-1"
                      style="padding-left: 52px;"
                    >
                      <button
                        class="p-0.5 rounded text-text-secondary hover:bg-overlay-subtle"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-right h-4 w-4"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m9 18 6-6-6-6"
                          />
                        </svg>
                      </button>
                      <img
                        alt=""
                        class="rounded-sm"
                        height="20"
                        src="https://images.evetech.net/types/11399/icon?size=32"
                        width="20"
                      />
                      <span
                        class="text-text-emphasis text-sm "
                      >
                        Morphite
                      </span>
                      <div
                        class="inline-flex items-center rounded-sm px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border border-[var(--color-primary-cyan)]/30 shadow ml-1 h-5 text-[11px] cursor-default bg-category-violet/10 text-category-violet hover:bg-category-violet/10"
                      >
                        reaction
                      </div>
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-secondary text-[13px]"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      ME 
                      0
                       / TE 
                      0
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-secondary text-[13px]"
                  >
                    raitaru
                     / 
                    t2
                     / 
                    low
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-secondary text-[13px]"
                  >
                    —
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
                  >
                    <button
                      aria-label="Edit"
                      class="p-1 rounded hover:bg-interactive-selected text-primary"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-pencil h-4 w-4"
                        data-testid="EditIcon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                        />
                        <path
                          d="m15 5 4 4"
                        />
                      </svg>
                    </button>
                    <button
                      aria-label="Delete"
                      class="p-1 rounded hover:bg-rose-danger/10 text-rose-danger"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10 11v6"
                        />
                        <path
                          d="M14 11v6"
                        />
                        <path
                          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                        />
                        <path
                          d="M3 6h18"
                        />
                        <path
                          d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                        />
                      </svg>
                    </button>
                  </td>
                </tr>
                <tr
                  class="border-b border-[var(--color-border-dim)] transition-colors data-[state=selected]:bg-muted bg-background-void hover:bg-background-panel"
                >
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] relative pl-0"
                  >
                    <div
                      class="absolute top-0 bottom-0 w-[3px]"
                      style="left: 8px; background-color: var(--color-primary-cyan);"
                    />
                    <div
                      class="flex items-center gap-1"
                      style="padding-left: 52px;"
                    >
                      <img
                        alt=""
                        class="rounded-sm"
                        height="18"
                        src="https://images.evetech.net/types/34/icon?size=32"
                        width="18"
                      />
                      <span
                        class="text-text-primary text-[13px]"
                      >
                        Tritanium
                      </span>
                      <span
                        class="text-text-muted text-xs ml-1"
                      >
                        x
                        22222
                      </span>
                      <div
                        class="inline-flex items-center rounded-sm px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border hover:border-[var(--color-border-active)] ml-1 h-[18px] text-[10px] border-overlay-medium text-text-muted cursor-default"
                      >
                        Buy
                      </div>
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-muted text-xs"
                  />
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  />
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  />
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
                  />
                </tr>
                <tr
                  class="border-b border-[var(--color-border-dim)] transition-colors data-[state=selected]:bg-muted bg-background-void hover:bg-background-panel"
                >
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] relative pl-0"
                  >
                    <div
                      class="absolute top-0 bottom-0 w-[3px]"
                      style="left: 8px; background-color: var(--color-primary-cyan);"
                    />
                    <div
                      class="flex items-center gap-1"
                      style="padding-left: 52px;"
                    >
                      <img
                        alt=""
                        class="rounded-sm"
                        height="18"
                        src="https://images.evetech.net/types/35/icon?size=32"
                        width="18"
                      />
                      <span
                        class="text-text-primary text-[13px]"
                      >
                        Pyerite
                      </span>
                      <span
                        class="text-text-muted text-xs ml-1"
                      >
                        x
                        5555
                      </span>
                      <div
                        class="inline-flex items-center rounded-sm px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border hover:border-[var(--color-border-active)] ml-1 h-[18px] text-[10px] border-overlay-medium text-text-muted cursor-default"
                      >
                        Buy
                      </div>
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-muted text-xs"
                  />
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  />
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  />
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="radix-_r_2q_-trigger-batch-configure"
        class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-_r_2q_-content-batch-configure"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-labelledby="radix-_r_2q_-trigger-transport"
        class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-_r_2q_-content-transport"
        role="tabpanel"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;
